[tool.poetry]
name = "qiita_contribution"
version = "0.1.0"
description = "Retrieve information via Qiita API v2 and calculate simplified Qiita Contribution"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
license = "MIT Lisence"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
